// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IfStatement component should not render alternate because there is none 1`] = `
<div
  class="IfStatement"
>
  <div
    class="test flex flex-wrap"
    style="padding-left: 20px; align-items: center; min-height: 32px;"
  >
    <span
      class="clickable delete-blockstatement"
      style="display: none;"
    >
      <i
        class="material-icons"
        id="body-0-expression"
      >
        close
      </i>
    </span>
    <button
      class="mr-1 btn btn-info"
      type="button"
    >
      IF
    </button>
    <div
      class="ui-badge-badge-0cf8 unknownstatement ui-badge-uppercase-0cf8"
      data-color="red"
      data-corner="round"
      data-name="badge"
      data-type="error"
    >
      Unknown 
    </div>
  </div>
  <div
    class="consequent"
  >
    <div
      class="container"
    >
      <div
        class="icon-wrapper"
      >
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
      <span
        class="d-inline-flex"
        style="display: flex; min-height: 32px; align-items: center;"
      >
        <div
          class="AddActionOrIfStatement btn-group"
          style="padding-left: 20px;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="ControlStructureButton dropdown-toggle btn btn-secondary"
            type="button"
          >
            THEN
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Action
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              "IF" statement
            </button>
          </div>
        </div>
      </span>
      <div>
        <div
          class="ui-badge-badge-0cf8 unknownstatement ui-badge-uppercase-0cf8"
          data-color="red"
          data-corner="round"
          data-name="badge"
          data-type="error"
        >
          Unknown 
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`IfStatement component should render alternate because there is one 1`] = `
<div
  class="IfStatement"
>
  <div
    class="test flex flex-wrap"
    style="padding-left: 20px; align-items: center; min-height: 32px;"
  >
    <span
      class="clickable delete-blockstatement"
      style="display: none;"
    >
      <i
        class="material-icons"
        id="body-0-expression"
      >
        close
      </i>
    </span>
    <button
      class="mr-1 btn btn-info"
      type="button"
    >
      IF
    </button>
    <div
      class="ui-badge-badge-0cf8 unknownstatement ui-badge-uppercase-0cf8"
      data-color="red"
      data-corner="round"
      data-name="badge"
      data-type="error"
    >
      Unknown 
    </div>
  </div>
  <div
    class="consequent"
  >
    <div
      class="container"
    >
      <div
        class="icon-wrapper"
      >
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
      <span
        class="d-inline-flex"
        style="display: flex; min-height: 32px; align-items: center;"
      >
        <div
          class="AddActionOrIfStatement btn-group"
          style="padding-left: 20px;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="ControlStructureButton dropdown-toggle btn btn-secondary"
            type="button"
          >
            THEN
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Action
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              "IF" statement
            </button>
          </div>
        </div>
      </span>
      <div>
        <div
          class="ui-badge-badge-0cf8 unknownstatement ui-badge-uppercase-0cf8"
          data-color="red"
          data-corner="round"
          data-name="badge"
          data-type="error"
        >
          Unknown 
        </div>
      </div>
    </div>
  </div>
  <div
    class="alternate"
  >
    <div
      class="container"
    >
      <div
        class="icon-wrapper"
      >
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
      <span
        class="d-inline-flex"
        style="display: flex; min-height: 32px; align-items: center;"
      >
        <div
          class="AddActionOrIfStatement btn-group"
          style="padding-left: 20px;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="ControlStructureButton dropdown-toggle btn btn-secondary"
            type="button"
          >
            ELSE
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Action
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              "IF" statement
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <i
                class="material-icons red mr-1"
              >
                delete
              </i>
              Delete node
            </button>
          </div>
        </div>
      </span>
      <div>
        <div
          class="ui-badge-badge-0cf8 unknownstatement ui-badge-uppercase-0cf8"
          data-color="red"
          data-corner="round"
          data-name="badge"
          data-type="error"
        >
          Unknown 
        </div>
      </div>
    </div>
  </div>
</div>
`;
